--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</ul>
 		<div id="accordionNav">
 			<div class="accordionPanel">
-				<div class="accordionPanelTab highlight" id="eventsWeekTab" onClick="showEventsWeek()">Events This Week</div>
+				<div class="accordionPanelTab highlight" id="eventsWeekTab" onClick="showEventsWeek()"><a href="photo-gallery.html">Events This Week</a></div>
 				<div class="accordionPanelContent" id="eventsWeekContent">
 					<a href="#">
 						<img src="img/thumb-fpcp.jpg" width="180" height="140">
